--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,9 @@ fastapi==0.104.1
 uvicorn==0.24.0
 python-multipart==0.0.6
 numpy==1.24.3
-torch==2.1.0
+torch==2.0.1+cpu       # smaller & compatible version (CPU-only)
+-f https://download.pytorch.org/whl/torch_stable.html
 onnxruntime==1.16.0
 psutil==5.9.5
 python-dotenv==1.0.0
-pydantic==1.10.13 
+pydantic==1.10.13
